seaqt/QtMultimedia/gen_qvideoencodersettingscontrol.h

class QMetaMethod;
class QMetaObject;
class QObject;
class QSize;
class QVideoEncoderSettings;
class QVideoEncoderSettingsControl;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSize QSize;
typedef struct QVideoEncoderSettings QVideoEncoderSettings;
typedef struct QVideoEncoderSettingsControl QVideoEncoderSettingsControl;
QMetaObject* QVideoEncoderSettingsControl_metaObject(const QVideoEncoderSettingsControl* self);
void* QVideoEncoderSettingsControl_metacast(QVideoEncoderSettingsControl* self, const char* param1);
int QVideoEncoderSettingsControl_metacall(QVideoEncoderSettingsControl* self, int param1, int param2, void** param3);
struct seaqt_string QVideoEncoderSettingsControl_tr(const char* s);
struct seaqt_string QVideoEncoderSettingsControl_trUtf8(const char* s);
struct seaqt_array /* of QSize* */  QVideoEncoderSettingsControl_supportedResolutions(const QVideoEncoderSettingsControl* self, QVideoEncoderSettings* settings, bool* continuous);
struct seaqt_array /* of double */  QVideoEncoderSettingsControl_supportedFrameRates(const QVideoEncoderSettingsControl* self, QVideoEncoderSettings* settings, bool* continuous);
struct seaqt_array /* of struct seaqt_string */  QVideoEncoderSettingsControl_supportedVideoCodecs(const QVideoEncoderSettingsControl* self);
struct seaqt_string QVideoEncoderSettingsControl_videoCodecDescription(const QVideoEncoderSettingsControl* self, struct seaqt_string codec);
QVideoEncoderSettings* QVideoEncoderSettingsControl_videoSettings(const QVideoEncoderSettingsControl* self);
void QVideoEncoderSettingsControl_setVideoSettings(QVideoEncoderSettingsControl* self, QVideoEncoderSettings* settings);
struct seaqt_string QVideoEncoderSettingsControl_tr2(const char* s, const char* c);
struct seaqt_string QVideoEncoderSettingsControl_tr3(const char* s, const char* c, int n);
struct seaqt_string QVideoEncoderSettingsControl_trUtf82(const char* s, const char* c);
struct seaqt_string QVideoEncoderSettingsControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QVideoEncoderSettingsControl_staticMetaObject();